Adds support for IntlExtension

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "symfony/console":     "^5.0",
     "symfony/finder":      "^5.0",
     "twig/twig":           "^3.0",
-    "ulrichsg/getopt-php": "^3.3"
+    "ulrichsg/getopt-php": "^3.3",
+    "twig/intl-extra":     "^3.5"
   },
 
   "require-dev": {
